force-app/main/default/objects/NI_PerfEval_Goals__c/NI_PerfEval_Goals__c.object-meta.xml
<CustomObject>
    <label>Goal</label>
    <nameField>
        <displayFormat>GOAL-{0}</displayFormat>
        <label>Eval Goal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>