force-app/main/default/objects/NI_PerfEval_Goals__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Performance Goals are specific to your job.
Personal/Career Development Goals are related to gaining new skills.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Performance Goal</fullName>
            </value>
            <value>
                <fullName>Personal/Career Development Goal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>