force-app/main/default/objects/NI_PerfEval_Goals__c/fields/Current_Previous_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Previous_Year__c</fullName>
    <label>Current/Previous Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Goal From Last Year</fullName>
            </value>
            <value>
                <fullName>Goal For Coming Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>