force-app/main/default/objects/NI_PerfEval_Goals__c/fields/Employee_Performance_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Employee_Performance_Evaluation__c</fullName>
    <label>Employee Performance Evaluation</label>
    <referenceTo>NI_Employee_Performance_Evaluation__c</referenceTo>
    <relationshipName>PerfEval_Goals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>