force-app/main/default/objects/NI_PerfEval_Goals__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Each goal should be entered individually.</inlineHelpText>
    <label>Goal</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>