force-app/main/default/objects/NI_PerfEval_Goals__c/fields/Set_By__c.field-meta.xml
<CustomField>
    <fullName>Set_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person who set this goal</description>
    <inlineHelpText>The person who set this goal</inlineHelpText>
    <label>Set By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Goals</relationshipName>
    <type>Lookup</type>
</CustomField>