force-app/main/default/objects/NI_PerfEval_Goals__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Use for goals from last year only.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Current_Previous_Year__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Partially Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Removed from Goals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>